# cgo-example

./: .gitignore  README.md  cgo_example.go  comprehensive_cgo.go  cpp_json_example_demo.go  cpp_json_example_go.go  cpp_library_example.go  go.mod  main.go  test_calculator.go
cpp/: Makefile  calculator.cpp  calculator.h
cpp_json_example/: CMakeLists.txt  README.md  build.sh  vcpkg.json
cpp_json_example/include/: json_processor.h
cpp_json_example/src/: json_processor.cpp
